--- a/Assignment_2B_Wandb.ipynb
+++ b/Assignment_2B_Wandb.ipynb
@@ -532,7 +532,7 @@
         "outputId": "4d7269a9-4e81-4b2b-bdf7-5a8195daace3"
       },
       "source": [
-        "!pip install wandb"
+        "#!pip install wandb"
       ],
       "execution_count": null,
       "outputs": [
@@ -608,10 +608,10 @@
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "import matplotlib.pyplot as plt\n",
         "import cv2\n",
-        "import wandb\n",
-        "from wandb.keras import WandbCallback"
+        "#import wandb\n",
+        "#from wandb.keras import WandbCallback"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -626,7 +626,7 @@
         "from keras.applications.resnet50 import ResNet50\n",
         "from keras.applications.xception import Xception"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -643,7 +643,7 @@
         "test_dir='inaturalist_12K/val/'\n",
         "categories=['Amphibia','Animalia','Arachnida','Aves','Fungi','Insecta','Mammalia','Mollusca','Plantae','Reptilia']"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -652,6 +652,8 @@
         "id": "0vS7KdPEzPVq"
       },
       "source": [
+        "#Run this cell\n",
+        "\n",
         "sweep_config = {\n",
         "  'name': 'sweep5b',  \n",
         "  'method': 'grid',\n",
@@ -688,7 +690,7 @@
         "    'pre_train':'inceptionresnetv2'\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -697,6 +699,8 @@
         "id": "SsElcmRUBU3v"
       },
       "source": [
+        "#Run this cell for Wandb after uncommenting\n",
+        "\n",
         "def PreTrain():\n",
         "\n",
         "  #wandb init and log commented to do trial run\n",
@@ -821,7 +825,8 @@
         "\n",
         "  val_acc=max(hist.history['val_accuracy'])\n",
         "  params={'batch_norm':batchnorm,'augmentation':augmentation,'dropout':droprate,'pre_trained_model':pre_train,'val_acc':val_acc}\n",
-        "  #wandb.log(params)"
+        "  #wandb.log(params)\n",
+        "  "
       ],
       "execution_count": null,
       "outputs": []
@@ -1350,12 +1355,223 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NVCitwd9LPyF"
+        "id": "NVCitwd9LPyF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5fd74877-2a8a-46d4-868f-e25ef39927f3"
+      },
+      "source": [
+        "# Defining model with best configs to evaluate on test set  \n",
+        "  configs=config_defaults\n",
+        "\n",
+        "  batchnorm=configs['batchnorm']\n",
+        "  droprate=configs['droprate']\n",
+        "  augmentation=configs['augmentation']\n",
+        "  fc_size=configs['fc_size']\n",
+        "  pre_train = configs['pre_train']\n",
+        "\n",
+        "  #wandb.run.name='model_'+pre_train+'_fc_2_size_'+str(fc_size)+'_droprate_'+str(droprate)+ str('_bn_' if batchnorm=='yes' else '') +str('augment' if augmentation=='yes' else '')\n",
+        "\n",
+        "\n",
+        "  if pre_train == 'inceptionv3':\n",
+        "    img_height = 299\n",
+        "    img_width = 299\n",
+        "    base_model = InceptionV3(include_top=False, weights='imagenet',input_shape=(img_height, img_width,3))\n",
+        "\n",
+        "  if pre_train == 'inceptionresnetv2':\n",
+        "    img_height = 299\n",
+        "    img_width = 299\n",
+        "    base_model = InceptionResNetV2(include_top=False, weights='imagenet',input_shape=(img_height, img_width,3))\n",
+        "\n",
+        "  if pre_train == 'resnet50':\n",
+        "    img_height = 224\n",
+        "    img_width = 224\n",
+        "    base_model = ResNet50(include_top=False, weights='imagenet',input_shape=(img_height, img_width,3))\n",
+        "\n",
+        "  if pre_train == 'Xception':\n",
+        "    img_height = 299\n",
+        "    img_width = 299\n",
+        "    base_model = Xception(include_top=False, weights='imagenet',input_shape=(img_height, img_width,3))  \n",
+        "\n",
+        "\n",
+        "  for layers in base_model.layers:\n",
+        "    layers.trainable = False\n",
+        "\n",
+        "  model = keras.Sequential([\n",
+        "      tf.keras.Input(shape=(img_height, img_width,3,)),\n",
+        "      base_model,\n",
+        "      Flatten(),\n",
+        "      Dense(fc_size,activation='relu'),\n",
+        "      \n",
+        "  ])\n",
+        "  if batchnorm == 'yes':\n",
+        "    model.add(BatchNormalization())\n",
+        "  model.add(Dropout(droprate))\n",
+        "  model.add(Dense(fc_size, activation='relu'))\n",
+        "  model.add(Dropout(droprate))\n",
+        "  model.add(Dense(10 ,activation='softmax'))\n",
+        "  \n",
+        "\n",
+        "  #data generators for train(with and without validation) and validation\n",
+        "  augment= ImageDataGenerator(\n",
+        "    rotation_range=30,\n",
+        "    width_shift_range=0.2,\n",
+        "    height_shift_range=0.2,\n",
+        "    zoom_range=0.2,\n",
+        "    horizontal_flip=True,\n",
+        "    rescale=1.0 / 255,\n",
+        "    validation_split=0.1,\n",
+        "    dtype=tf.float32,\n",
+        "  )\n",
+        "\n",
+        "  datagen = ImageDataGenerator(\n",
+        "    rescale=1.0 / 255,\n",
+        "    validation_split=0.1,\n",
+        "    dtype=tf.float32,\n",
+        "  )\n",
+        "\n",
+        "  train_set = datagen.flow_from_directory(\n",
+        "    train_dir,\n",
+        "    target_size=(img_height, img_width),\n",
+        "    batch_size=32,\n",
+        "    color_mode='rgb',\n",
+        "    class_mode='sparse',\n",
+        "    shuffle=True,\n",
+        "    subset='training',\n",
+        "    seed=123,\n",
+        "  )\n",
+        "\n",
+        "  aug_set = augment.flow_from_directory(\n",
+        "      train_dir,\n",
+        "      target_size=(img_height, img_width),\n",
+        "      batch_size=32,\n",
+        "      color_mode='rgb',\n",
+        "      class_mode='sparse',\n",
+        "      shuffle=True,\n",
+        "      subset='training',\n",
+        "      seed=123,\n",
+        "  )\n",
+        "\n",
+        "  val_set = datagen.flow_from_directory(\n",
+        "      train_dir,\n",
+        "      target_size=(img_height, img_width),\n",
+        "      color_mode='rgb',\n",
+        "      class_mode='sparse',\n",
+        "      shuffle=True,\n",
+        "      subset='validation',\n",
+        "      seed=123,\n",
+        "  )\n",
+        "\n",
+        "  model.compile(\n",
+        "    optimizer=tf.keras.optimizers.Adam(),\n",
+        "    loss=[tf.keras.losses.SparseCategoricalCrossentropy()],\n",
+        "    metrics=['accuracy'],\n",
+        "  )\n",
+        "\n",
+        "  if augmentation =='no' :\n",
+        "    #hist=model.fit(train_set,epochs=10,validation_data=val_set,callbacks=[WandbCallback()]) \n",
+        "    hist=model.fit(train_set,epochs=10,validation_data=val_set)\n",
+        "  \n",
+        "  else:\n",
+        "    #hist=model.fit(aug_set,epochs=10,validation_data=val_set,callbacks=[WandbCallback()])\n",
+        "    hist=model.fit(aug_set,epochs=10,validation_data=val_set)\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/inception_resnet_v2/inception_resnet_v2_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "219062272/219055592 [==============================] - 1s 0us/step\n",
+            "Found 9000 images belonging to 10 classes.\n",
+            "Found 9000 images belonging to 10 classes.\n",
+            "Found 999 images belonging to 10 classes.\n",
+            "Epoch 1/10\n",
+            "282/282 [==============================] - 344s 1s/step - loss: 1.7028 - accuracy: 0.4703 - val_loss: 0.6269 - val_accuracy: 0.8028\n",
+            "Epoch 2/10\n",
+            "282/282 [==============================] - 290s 1s/step - loss: 0.9174 - accuracy: 0.7152 - val_loss: 0.5931 - val_accuracy: 0.8188\n",
+            "Epoch 3/10\n",
+            "282/282 [==============================] - 283s 1s/step - loss: 0.8025 - accuracy: 0.7481 - val_loss: 0.5447 - val_accuracy: 0.8368\n",
+            "Epoch 4/10\n",
+            "282/282 [==============================] - 282s 1s/step - loss: 0.7885 - accuracy: 0.7509 - val_loss: 0.5423 - val_accuracy: 0.8248\n",
+            "Epoch 5/10\n",
+            "282/282 [==============================] - 283s 1s/step - loss: 0.7350 - accuracy: 0.7631 - val_loss: 0.5582 - val_accuracy: 0.8328\n",
+            "Epoch 6/10\n",
+            "282/282 [==============================] - 283s 1s/step - loss: 0.7117 - accuracy: 0.7723 - val_loss: 0.5664 - val_accuracy: 0.8318\n",
+            "Epoch 7/10\n",
+            "282/282 [==============================] - 284s 1s/step - loss: 0.7060 - accuracy: 0.7744 - val_loss: 0.5425 - val_accuracy: 0.8298\n",
+            "Epoch 8/10\n",
+            "282/282 [==============================] - 283s 1s/step - loss: 0.6945 - accuracy: 0.7791 - val_loss: 0.5276 - val_accuracy: 0.8338\n",
+            "Epoch 9/10\n",
+            "282/282 [==============================] - 286s 1s/step - loss: 0.6763 - accuracy: 0.7815 - val_loss: 0.5357 - val_accuracy: 0.8278\n",
+            "Epoch 10/10\n",
+            "282/282 [==============================] - 287s 1s/step - loss: 0.6834 - accuracy: 0.7820 - val_loss: 0.5317 - val_accuracy: 0.8318\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ul28lGnRy_uh",
+        "outputId": "a85b5874-52d7-47b7-eba2-157db5d9df10"
+      },
+      "source": [
+        "#data generator for test set\n",
+        "test_datagen = ImageDataGenerator(\n",
+        "    rescale=1.0 / 255,\n",
+        "  )\n",
+        "\n",
+        "test_set = test_datagen.flow_from_directory(\n",
+        "      test_dir,\n",
+        "      target_size=(img_height, img_width),\n",
+        "      color_mode='rgb',\n",
+        "      class_mode='sparse',\n",
+        "      shuffle=True,\n",
+        "      seed=123,\n",
+        "  )\n",
+        "\n",
+        "#evaluating model on test set\n",
+        "model.evaluate(test_set)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 2000 images belonging to 10 classes.\n",
+            "63/63 [==============================] - 34s 534ms/step - loss: 0.5280 - accuracy: 0.8410\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.5280486941337585, 0.8410000205039978]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WDZzNGje_m0E"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     }
   ]
